config/kueueviz/frontend_deployment_patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kueueviz-frontend
  namespace: system
spec:
  template:
    spec:
      containers:
        - name: frontend
