config/kueueviz/remove_shared_ingress.yaml
---
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kueueviz-ingress
  namespace: system
